<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".VProfileWorker">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/shadow_style"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_user_avatar" />

            <TextView
                android:id="@+id/VWorkerFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7"
                tools:text="الإسم الكامل" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/VWorkerLikes"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/VWorkerFullName"
                app:srcCompat="@drawable/ic_like" />

            <TextView
                android:id="@+id/VWorkerLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="0"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintEnd_toStartOf="@+id/imageView9"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintEnd_toStartOf="@+id/VWorkerDislikes"
                app:layout_constraintStart_toEndOf="@+id/VWorkerLikes"
                app:layout_constraintTop_toTopOf="@+id/imageView8"
                app:srcCompat="@drawable/ic_dislike" />

            <TextView
                android:id="@+id/VWorkerDislikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shadow_style"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/VWorkerPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="end|center_vertical"
                android:text="@string/loading"
                android:textColor="@color/textPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="@+id/imageView10" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView10"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/VWorkerAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="end"
                android:text="@string/loading"
                android:textColor="@color/textPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/actionRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <Button
                android:id="@+id/callButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_style1"
                android:text="@string/call_worker"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/mapsButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_style1"
                android:text="@string/open_maps"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionRow">

            <Button
                android:id="@+id/likeButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_reaction"
                android:drawableLeft="@drawable/ic_like"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/dislikeButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/button_reaction"
                android:drawableLeft="@drawable/ic_dislike"
                android:paddingLeft="10dp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
